--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Test Ultra Secreto</title>
+  <meta charset="UTF-8">
+  <title>¿Cuánto me conoces?</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background-color: #f2f2f2;
+    }
+    .correcta {
+      color: green;
+      font-weight: bold;
+    }
+    .incorrecta {
+      color: red;
+      font-weight: bold;
+    }
+    .respuesta {
+      margin: 10px 0;
+    }
+    .resultado {
+      margin-top: 30px;
+      font-size: 20px;
+    }
+    .respuesta-correcta {
+      background-color: #d4edda;
+      padding: 5px;
+      border-radius: 5px;
+    }
+    .respuesta-incorrecta {
+      background-color: #f8d7da;
+      padding: 5px;
+      border-radius: 5px;
+    }
+  </style>
 </head>
-<body style="text-align: center; font-family: Comic Sans MS; margin-top: 100px;">
-  <h1>Bienvenido al Test Secreto 😈</h1>
-  <p>Solo los elegidos con el link pueden ver esto...</p>
-  <button onclick="alert('Eres oficialmente parte del club secreto 🕵️‍♂️')">
-    Hacer el test
-  </button>
+<body>
+
+  <h1>¿Cuánto me conoces?</h1>
+  <form id="quizForm">
+    <div class="pregunta">
+      <p>1. ¿Cuál es mi comida favorita?</p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta1" value="Pizza"> Pizza
+      </label><br>
+      <label class="respuesta">
+        <input type="radio" name="pregunta1" value="Pollo"> Pollo
+      </label><br>
+      <label class="respuesta">
+        <input type="radio" name="pregunta1" value="Hamburguesa"> Hamburguesa
+      </label><br>
+      <label class="respuesta">
+        <input type="radio" name="pregunta1" value="Tortilla de patatas"> Tortilla de patatas
+      </label>
+    </div>
+
+    <br>
+    <button type="button" onclick="corregir()">Enviar respuestas</button>
+  </form>
+
+  <div class="resultado" id="resultado"></div>
+
+  <script>
+    function corregir() {
+      const respuestas = {
+        pregunta1: "Pizza"
+      };
+
+      let score = 0;
+      let total = 1;
+      let resultadoHTML = "";
+
+      const seleccion = document.querySelector('input[name="pregunta1"]:checked');
+      const respuestaUsuario = seleccion ? seleccion.value : null;
+
+      if (!respuestaUsuario) {
+        alert("Responde la pregunta primero, bribón.");
+        return;
+      }
+
+      if (respuestaUsuario === respuestas.pregunta1) {
+        score++;
+        resultadoHTML += `
+          <div class="respuesta-correcta">
+            ✅ Pregunta 1: "${respuestaUsuario}" es correcta.
+          </div>
+        `;
+      } else {
+        resultadoHTML += `
+          <div class="respuesta-incorrecta">
+            ❌ Pregunta 1: Tú pusiste "${respuestaUsuario}", pero la buena era "${respuestas.pregunta1}".
+          </div>
+        `;
+      }
+
+      const porcentaje = (score / total) * 100;
+      resultadoHTML += `<p>🧠 Puntuación: ${score}/${total} (${porcentaje.toFixed(2)}%)</p>`;
+
+      document.getElementById("resultado").innerHTML = resultadoHTML;
+    }
+  </script>
+
 </body>
 </html>
