--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -121,7 +121,8 @@
       </label>
     </div>
 
-      <p>4. ¿Cuál fue mi primera pareja?</p>
+      <div class="pregunta">
+    <p>4. ¿Cuál fue mi primera pareja?</p>
       <label class="respuesta">
         <input type="radio" name="pregunta4" value="Nahia"> Nahia
       </label>
@@ -136,7 +137,8 @@
       </label>
     </div>
 
-          <p>5. ¿Cuál es uno de mis mayores miedos por no decir el mayor?</p>
+          <div class="pregunta">
+    <p>5. ¿Cuál es uno de mis mayores miedos por no decir el mayor?</p>
       <label class="respuesta">
         <input type="radio" name="pregunta5" value="Mar"> El mar
       </label>
@@ -151,7 +153,8 @@
       </label>
     </div>
 
-          <p>6. ¿Cosa de la que soy super friki?</p>
+          <div class="pregunta">
+            <p>6. ¿Cosa de la que soy super friki?</p>
       <label class="respuesta">
         <input type="radio" name="pregunta6" value="FNAF"> FNAF
       </label>
@@ -166,7 +169,8 @@
       </label>
     </div>
 
-              <p>7. ¿Creador de contenido favorito?</p>
+              <div class="pregunta">
+            <p>7. ¿Creador de contenido favorito?</p>
       <label class="respuesta">
         <input type="radio" name="pregunta7" value="Vegetta777"> Vegetta777
       </label>
@@ -181,7 +185,8 @@
       </label>
     </div>
 
-              <p>8. </p>
+              <div class="pregunta">
+    <p>8. </p>
       <label class="respuesta">
         <input type="radio" name="pregunta8" value="F"> 
       </label>
