--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -186,21 +186,78 @@
     </div>
 
               <div class="pregunta">
-    <p>8. </p>
+    <p>8.¿Qué edad tenía yo cuando mis padres se divorciaron? </p>
       <label class="respuesta">
-        <input type="radio" name="pregunta8" value="F"> 
+        <input type="radio" name="pregunta8" value="8"> 8
       </label>
       <label class="respuesta">
-        <input type="radio" name="pregunta8" value=""> 
+        <input type="radio" name="pregunta8" value="9"> 9
       </label>
       <label class="respuesta">
-        <input type="radio" name="pregunta8" value=""> 
+        <input type="radio" name="pregunta8" value="12"> 12
       </label>
       <label class="respuesta">
-        <input type="radio" name="pregunta8" value=""> 
+        <input type="radio" name="pregunta8" value="10"> 10
       </label>
     </div>
-    
+                  <div class="pregunta">
+    <p>9.¿Cuántas veces me he mudado? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta9" value="Una"> 1
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta9" value="Tres"> 3
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta9" value="Ninguna"> 0
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta9" value="Dos"> 2
+      </label>
+    </div>
+
+        <p>10.Si pudiera elegir cualquier superpoder, ¿cuál elegiría? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta10" value="Velocidad"> Super velocidad
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta10" value="LeerMente"> Leer la mente
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta10" value="Superfuerza"> Superfuerza
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta10" value="Volar"> Poder volar
+      </label>
+    </div>
+            <p>11.¿Cuál es mi deporte favorito? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta11" value="Tenis"> Tenis
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta11" value="Futbol"> Fútbol
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta11" value="Baloncesto"> Baloncesto
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta11" value="Rugby"> Rugby
+      </label>
+    </div>
+                <p>12.¿Qué es lo que más me molesta en una conversación? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta12" value="Interrumpir"> Que me interrumpan
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta12" value="Contradecir"> Que me contradigan
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta12" value="Cambios"> Que cambie de tema muy rápidamente
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta11" value="Cortante"> QUe la conversación sea cortante
+      </label>
+    </div>
     <button type="button" onclick="corregir()">Enviar respuestas</button>
   </form>
 
@@ -216,7 +273,11 @@
         pregunta5: "Personas",
         pregunta6: "FNAF",
         pregunta7: "Rubius",
-        pregunta8: "",
+        pregunta8: "10",
+        pregunta9: "Dos",
+        pregunta10: "LeerMente",
+        pregunta11: "Baloncesto",
+        pregunta12: "Interrumpir",
       };
 
       let score = 0;
