--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -216,6 +216,7 @@
       </label>
     </div>
 
+                  <div class="pregunta">
         <p>10.Si pudiera elegir cualquier superpoder, ¿cuál elegiría? </p>
       <label class="respuesta">
         <input type="radio" name="pregunta10" value="Velocidad"> Super velocidad
@@ -230,6 +231,7 @@
         <input type="radio" name="pregunta10" value="Volar"> Poder volar
       </label>
     </div>
+                  <div class="pregunta">
             <p>11.¿Cuál es mi deporte favorito? </p>
       <label class="respuesta">
         <input type="radio" name="pregunta11" value="Tenis"> Tenis
@@ -244,6 +246,7 @@
         <input type="radio" name="pregunta11" value="Rugby"> Rugby
       </label>
     </div>
+                                  <div class="pregunta">
                 <p>12.¿Qué es lo que más me molesta en una conversación? </p>
       <label class="respuesta">
         <input type="radio" name="pregunta12" value="Interrumpir"> Que me interrumpan
