--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -258,7 +258,103 @@
         <input type="radio" name="pregunta12" value="Cambios"> Que cambie de tema muy rápidamente
       </label>
       <label class="respuesta">
-        <input type="radio" name="pregunta11" value="Cortante"> QUe la conversación sea cortante
+        <input type="radio" name="pregunta12" value="Cortante"> Que la conversación sea cortante
+      </label>
+    </div>
+
+     <div class="pregunta">
+                <p>13.¿Cuales son mis géneros favoritos de series o películas? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta13" value="1"> Suspense, comedia y triste
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta13" value="2"> Terror, comedia y romance
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta13" value="3"> Acción, thriller y musical
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta13" value="4"> Fantasía, aventura y drama
+      </label>
+    </div>
+
+         <div class="pregunta">
+                <p>14.¿Cuál es mi género de música preferido? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta14" value="Requeton"> Requetón
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta14" value="Jazz"> Jazz
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta14" value="Hardcore"> Hardcore/Electrónica
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta14" value="Clasica"> Clásica
+      </label>
+    </div>
+
+         <div class="pregunta">
+                <p>15.¿Actualmente cuanto llevo sin vapear? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta15" value="9"> 9 meses
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta15" value="12"> Un año
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta15" value="8"> 8 meses
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta15" value="0"> Vapee ayer
+      </label>
+    </div>
+
+         <div class="pregunta">
+                <p>16.¿Soy diestro, zurdo o ambidiestro? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta16" value="Zurdo"> Zurdo
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta16" value="Ambidiestro"> Ambidiestro
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta16" value="Nose"> Nose
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta16" value="Diestro"> Diestro
+      </label>
+    </div>
+
+         <div class="pregunta">
+                <p>17.Si tuviera que eliminar una saga de videojuegos, sería... </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta17" value="FIFA"> FIFA
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta17" value="FNAF2"> FNAF
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta17" value="SM"> Super Mario
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta17" value="COD"> Call Of Duty
+      </label>
+    </div>
+
+         <div class="pregunta">
+                <p>18.¿Cuántos anillos tengo? </p>
+      <label class="respuesta">
+        <input type="radio" name="pregunta18" value="Cuatro"> Cuatro
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta18" value="Tres"> Tres
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta18" value="Cinco"> Cinco
+      </label>
+      <label class="respuesta">
+        <input type="radio" name="pregunta18" value="Seis"> Seis
       </label>
     </div>
     <button type="button" onclick="corregir()">Enviar respuestas</button>
@@ -281,6 +377,12 @@
         pregunta10: "LeerMente",
         pregunta11: "Baloncesto",
         pregunta12: "Interrumpir",
+        pregunta13: "2",
+        pregunta14: "Hardcore",
+        pregunta15: "9",
+        pregunta16: "Diestro",
+        pregunta17: "FIFA",
+        pregunta18: "Cuatro",
       };
 
       let score = 0;
