--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¿Cuánto me conoces?<br>Si no alcanzas el 50% de nota como mínimo no pagaré tu comida</title>
+  <title>¿Cuánto me conoces?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-  <h1>¿Cuánto me conoces?</h1>
+  <h1>¿Cuánto me conoces?<br>Si no alcanzas el 50% de nota como mínimo no pagaré tu comida</h1>
 
   <form id="quizForm">
     <div class="pregunta">
