--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -357,7 +357,7 @@
         <input type="radio" name="pregunta18" value="Seis"> Seis
       </label>
     </div>
-
+                  <div class="pregunta">
                     <p>19.¿Cuál ha sido mi trabajo soñado? </p>
       <label class="respuesta">
         <input type="radio" name="pregunta19" value="Streamer"> Streamer
