--- a/Carpeta/Test.html
+++ b/Carpeta/Test.html
@@ -436,6 +436,20 @@
 
       const porcentaje = (score / total) * 100;
       resultadoHTML += `<p><strong>🧠 Puntuación:</strong> ${score}/${total} (${porcentaje.toFixed(2)}%)</p>`;
+      let mensajeFinal = "";
+      if (porcentaje < 50) {
+        mensajeFinal = "❌ No eres un verdadero bro, no me esperaba esto de ti";
+      } else if (porcentaje >= 50 && porcentaje <= 60) {
+        mensajeFinal = "🤝 Me conoces pero lo justo y necesario";
+      } else if (porcentaje >= 70 && porcentaje <= 80) {
+        mensajeFinal = "👏 Bien hecho mi bro, aunque se te han olvidado algunas cosas";
+      } else if (porcentaje >= 90) {
+        mensajeFinal = "🔥 Eres el verdadero BRO, hasta la muerte";
+      }
+
+      if (mensajeFinal) {
+        resultadoHTML += `<p><strong>${mensajeFinal}</strong></p>`;
+      }
 
       document.getElementById("resultado").innerHTML = resultadoHTML;
     }
